syntax = "proto3";
package foundation.v1.settings;
option go_package = "foundation/v1/settings";

import "google/protobuf/struct.proto";

message SetGlobalSettingsRequest {
  map<string, google.protobuf.Value> settings = 1;
}

message SetGlobalSettingsResponse {
}

service GlobalSettingsService {
  rpc SetGlobalSettings(SetGlobalSettingsRequest) returns (SetGlobalSettingsResponse) {}
}
